# geoagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  data_formats.md  installation.md  quickstart.md
examples/: 01_load_project.py  02_well_log_panel.py  03_location_map.py  04_synthetic_tie.py  05_bulk_shift_scan.py
examples/notebooks/: quickstart.ipynb  well_correlation.ipynb
examples/stratton/: .gitignore  build_stratton_project.py
examples/teapot/: .gitignore  build_teapot_project.py  enrich_teapot_project.py
examples/volve/: .gitignore  build_volve_project.py  download_volve.py
geoagent/: __init__.py
geoagent/assets/: mnemonics.txt
geoagent/core/: __init__.py  data_manager.py  horizons_handler.py  seismic_handler.py  wavelet.py  well_handler.py  well_log_handler.py
geoagent/io/: __init__.py  polygon_utils.py  project_builder.py  project_loader.py
geoagent/plotting/: __init__.py  config.py  map_plotter.py  map_utils.py  section_plotter.py  seismic_plotter.py  well_panel.py
geoagent/settings/: log_naming_settings.py
geoagent/synthetic/: __init__.py  bulk_shift.py  functions.py  wavelet_functions.py
geoagent/utils/: __init__.py  interpolation.py  safe_print.py  trace_spatial_indexer.py  twt_utils.py
geoagent/well/: __init__.py  deviation_utils.py  log_windower.py  (+2 more)
tests/: conftest.py  test_config.py  test_data_manager.py  test_deviation_utils.py  test_interpolation.py  test_mnemonic_resolver.py  test_project_builder.py  test_spatial_indexer.py  test_synthetic_functions.py  test_visualization.py
