[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoagent"
version = "0.1.0"
description = "Open-source geoscience data toolkit — well data, synthetic seismograms, log correlation sections, and maps in pure Python."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Arun Bharadwaj"},
]
keywords = ["geoscience", "seismic", "well-log", "synthetic", "correlation", "petrophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib>=3.5",
    "segyio",
    "lasio",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
horizons = [
    "zmapio",
]

[project.urls]
Homepage = "https://github.com/arunbharadwaj/geoagent"
Repository = "https://github.com/arunbharadwaj/geoagent"
Issues = "https://github.com/arunbharadwaj/geoagent/issues"

[tool.setuptools.packages.find]
include = ["geoagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:langsmith"
